# Privalyse_privalyse-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DETECTION_RULES.md  MANIFEST.in  README.md  THIRD_PARTY_NOTICES.txt  action.yml  privalyse.example.toml  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
examples/bad-practice-app/: Dockerfile  docker-compose.yml
examples/bad-practice-app/frontend/: RegisterForm.jsx
examples/best-practice-app/: app.py
examples/fullstack-flow-demo/frontend/src/: App.js
examples/modern-fullstack-app/backend/src/: server.ts
examples/modern-fullstack-app/backend/src/models/: user.model.ts
examples/modern-fullstack-app/backend/src/services/: userService.ts
examples/modern-fullstack-app/frontend/src/api/: userApi.ts
examples/modern-fullstack-app/frontend/src/components/: RegistrationForm.tsx
privalyse_scanner/: __init__.py  cli.py
privalyse_scanner/analyzers/: base_analyzer.py  compliance_analyzer.py  cross_file_analyzer.py  crypto_analyzer.py  infrastructure_analyzer.py  injection_analyzer.py  javascript_analyzer.py  python_analyzer.py  security_analyzer.py
privalyse_scanner/core/: import_resolver.py  scanner.py  symbol_table.py
privalyse_scanner/exporters/: __init__.py  html_exporter.py  markdown_exporter.py  report_generator.py
privalyse_scanner/models/: config.py  finding.py  graph.py  taint.py
privalyse_scanner/utils/: config_loader.py  custom_rules.py  helpers.py  ui.py
tests/: test_custom_rules.py  test_smoke.py
tests/e2e/scenarios/: mixed_leaks.py
