[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "privalyse"
version = "0.1.0"
description = "Privacy scanner with GDPR compliance reports - Zero config, instant insights"
readme = "README.md"
authors = [
    {name = "Privalyse Team", email = "hello@privalyse.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Operating System :: OS Independent",
]
keywords = [
    "privacy",
    "gdpr",
    "compliance",
    "security",
    "scanner",
    "pii",
    "data-protection",
    "audit",
    "sast",
    "code-analysis"
]
requires-python = ">=3.8"
dependencies = []

[project.urls]
Repository = "https://github.com/privalyse/privalyse-cli"
Issues = "https://github.com/privalyse/privalyse-cli/issues"
Changelog = "https://github.com/privalyse/privalyse-cli/blob/main/CHANGELOG.md"

[project.scripts]
privalyse = "privalyse_scanner.cli:cli"

[tool.setuptools]
packages = ["privalyse_scanner", "privalyse_scanner.analyzers", "privalyse_scanner.config", "privalyse_scanner.core", "privalyse_scanner.exporters", "privalyse_scanner.models", "privalyse_scanner.parsers", "privalyse_scanner.utils"]

[tool.setuptools.package-data]
privalyse_scanner = ["py.typed", "*.md"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
